--- a/views/panggung_views.xml
+++ b/views/panggung_views.xml
@@ -8,23 +8,65 @@
             <tree>
                 <!-- Add your fields here -->
                 <field name="name"/>
-                <field name="pelaminan"/>
+                <field name="pelaminan_id"/>
+                <field name="kursipengantin_id"/>
                 <field name="bunga"/>
                 <field name="accesories"/>
                 <field name="harga"/>
+                <field name="stok"/>
             </tree>
         </field>
     </record>
-    
+    <!-- wedding.panggung form view -->
+    <record id="wedding_panggung_view_form" model="ir.ui.view">
+        <field name="name">Form Panggung Pelaminan</field>
+        <field name="model">wedding.panggung</field>
+        <field name="arch" type="xml">
+            <form string="">
+                <sheet>
+                    <group>
+                        <!-- Add your fields here -->
+                        <field name="name"/>
+                        <field name="pelaminan_id"/>
+                        <field name="kursipengantin_id"/>                        
+                    </group>
+               
+                    <group>
+                        <field name="bunga"/>
+                        <field name="accesories"/>
+                        <field name="stok"/>
+                    </group>
+               
+                    <group>
+                        <field name="harga"/>
+                    </group>
+                    <notebook>
+                        <page string="DESKRIPSI PELAMINAN">
+                            <field name="des_pelaminan"/>
+                        </page>
+                        <page string="DESKRIPSI KURSI PENGANTIN">
+                            <field name="des_kursipengantin"/>
+                        </page>
+                    </notebook>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
     <!-- wedding.panggung action window -->
     <record id="wedding_panggung_action" model="ir.actions.act_window">
         <field name="name">Daftar Jenis Panggung</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">wedding.panggung</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree,form</field>        
     </record>
 
     <!-- This Menu Item must have a parent and an action -->
-    <menuitem id="wedding_akomodasi_panggung_menu_act" name="Panggung Pelaminan" parent="wedding_akomodasi_menu_categ" action="wedding_panggung_action" sequence="10"/>
-    
+    <menuitem 
+        id="wedding_akomodasi_panggung_menu_act" 
+        name="Panggung Pelaminan" 
+        parent="wedding_akomodasi_menu_categ" 
+        action="wedding_panggung_action" 
+        sequence="10"/>
+
 </odoo>
