make reduction stok function

--- a/views/panggung_views.xml
+++ b/views/panggung_views.xml
@@ -14,6 +14,7 @@
                 <field name="accesories"/>
                 <field name="harga"/>
                 <field name="stok"/>
+                <field name="orderdetail_ids"/>
             </tree>
         </field>
     </record>
@@ -46,6 +47,14 @@
                         </page>
                         <page string="DESKRIPSI KURSI PENGANTIN">
                             <field name="des_kursipengantin"/>
+                        </page>
+                        <page string="ORDER DETAIL">
+                            <field name="orderdetail_ids">
+                                <tree>
+                                    <field name="name"/>
+                                    <field name="qty"/>
+                                </tree>
+                            </field>
                         </page>
                     </notebook>
                 </sheet>
