--- a/views/order_views.xml
+++ b/views/order_views.xml
@@ -9,6 +9,7 @@
             <tree>
                 <!-- Add your fields here -->
                 <field name="name"/>
+                <field name="tanggal_pesan"/>
                 <field name="total"/>
                 <field name="orderdetail_ids"/>
             </tree>
@@ -25,6 +26,7 @@
                     <group>
                         <!-- Add your fields here -->
                         <field name="name"/>
+                        <field name="tanggal_pesan"/>
                         <field name="total"/>
 
                         <notebook colspan="4">
