add filter on pegawai and customer

--- a/views/menu.xml
+++ b/views/menu.xml
@@ -10,4 +10,7 @@
     <!-- This Menu Item Must have a parent -->
     <menuitem id="wedding_order_menu_categ" name="Order" parent="wedding_menu_root" sequence="20"/>
 
+    <!-- This Menu Item Must have a parent -->
+    <menuitem id="wedding_partner_menu_categ" name="Partner" parent="wedding_menu_root" sequence="30"/>
+
 </odoo>
