--- a/views/order_views.xml
+++ b/views/order_views.xml
@@ -7,7 +7,7 @@
         <field name="arch" type="xml">
             <tree delete="false">
                 <header>
-                    <button name="kembali_barang" string="Kembali Barang" class="btn btn-success" type="object" />
+                    <button name="invoice" string="Masuk Akunting Module" type="object" class="oe_highlight"/>
                 </header>
                 <!-- Add your fields here -->
                 <field name="name"/>    
